--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
 		"release": "np"
 	},
 	"dependencies": {
+		"dotenv": "^16.4.5",
 		"electron-context-menu": "^3.4.0",
 		"electron-debug": "^3.2.0",
 		"electron-store": "^8.1.0",
 		"electron-unhandled": "^4.0.1",
-		"electron-updater": "^5.2.1",
+		"electron-updater": "^6.1.7",
 		"electron-util": "^0.17.2"
 	},
 	"devDependencies": {
-		"electron": "^13.0.0",
-		"electron-builder": "^23.3.3",
+		"electron": "^28.0.0",
+		"electron-builder": "^24.9.1",
 		"np": "^7.6.2",
 		"xo": "^0.51.0"
 	},
