--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "all-in-one-desktop-app",
   "productName": "MyAPP",
   "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
   "description": "Generates production ready .exe, .dmg, .deb, etc. from a single codebase",
   "license": "MIT",
   "repository": "kumarsundeep/AllInOneDesktopApp",
