--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "npm run lint && npm run format",
-    "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder --macos --linux --windows",
+    "start": "vite",
+    "electron": "electron .",
+    "build": "vite build",
+    "dist": "npm run build && electron-builder --macos --linux --windows",
+    "dist:win": "npm run build && electron-builder --windows",
+    "dist:mac": "npm run build && electron-builder --macos",
+    "dist:linux": "npm run build && electron-builder --linux",
     "release": "np",
     "test:update": "electron . --test-update"
   },
@@ -35,6 +39,9 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "np": "^7.6.2",
+    "vite": "^6.3.5",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "xo": "^0.58.0"
   },
   "np": {
