memory worker implementation

--- a/package.json
+++ b/package.json
@@ -13,30 +13,33 @@
   },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
-    "lint": "eslint .",
+    "lint": "eslint . --config .eslintrc.cjs",
     "format": "prettier --write .",
     "test": "npm run lint && npm run format",
     "start": "vite",
     "electron": "electron .",
+    "dev": "concurrently -k \"npm run start\" \"npm run electron\"",
     "build": "vite build",
-    "dist": "npm run build && electron-builder --macos --linux --windows",
-    "dist:win": "npm run build && electron-builder --windows",
-    "dist:mac": "npm run build && electron-builder --macos",
-    "dist:linux": "npm run build && electron-builder --linux",
+    "dist": "npm run build && electron-builder --macos --linux --windows --parallel",
+    "dist:win": "npm run build && electron-builder --windows --parallel",
+    "dist:mac": "npm run build && electron-builder --macos --parallel",
+    "dist:linux": "npm run build && electron-builder --linux --parallel",
     "release": "np",
     "test:update": "electron . --test-update"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "electron": "28.0.0",
     "electron-context-menu": "^3.4.0",
     "electron-debug": "^3.2.0",
     "electron-store": "^8.1.0",
     "electron-unhandled": "^4.0.1",
     "electron-updater": "^6.1.7",
-    "electron-util": "^0.17.2"
+    "electron-util": "^0.17.2",
+    "i18next": "^23.0.0"
   },
   "devDependencies": {
-    "electron": "^28.0.0",
+    "concurrently": "^9.0.0",
     "electron-builder": "^24.9.1",
     "np": "^7.6.2",
     "vite": "^6.3.5",
