--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "electron": "electron .",
     "dev": "concurrently -k \"npm run start\" \"npm run electron\"",
     "build": "vite build",
-    "dist": "npm run build && electron-builder --macos --linux --windows --parallel",
-    "dist:win": "npm run build && electron-builder --windows --parallel",
-    "dist:mac": "npm run build && electron-builder --macos --parallel",
-    "dist:linux": "npm run build && electron-builder --linux --parallel",
+    "dist": "npm run build && electron-builder --macos --linux --windows",
+    "dist:win": "npm run build && electron-builder --windows",
+    "dist:mac": "npm run build && electron-builder --macos",
+    "dist:linux": "npm run build && electron-builder --linux",
     "release": "np",
     "test:update": "electron . --test-update"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "electron": "28.0.0",
     "electron-context-menu": "^3.4.0",
     "electron-debug": "^3.2.0",
     "electron-store": "^8.1.0",
@@ -52,7 +51,7 @@
     "releaseDraft": false
   },
   "build": {
-    "appId": "com.example.AllInOneDesktopApp",
+    "appId": "com.sundeep.AllInOneDesktopApp",
     "mac": {
       "category": "public.app-category.desktop",
       "darkModeSupport": true
@@ -74,7 +73,7 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "static/icon.ico"
+      "icon": "static/icon.png"
     },
     "nsis": {
       "oneClick": false,
@@ -84,8 +83,7 @@
       "target": [
         "AppImage",
         "deb",
-        "rpm",
-        "snap"
+        "rpm"
       ],
       "category": "Utility"
     }
